--- a/Bankapp/Layout/NavMenu.razor
+++ b/Bankapp/Layout/NavMenu.razor
@@ -15,6 +15,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="CreateAccount">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Create Account
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Accounts">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Accounts
             </NavLink>
