--- a/Bankapp/Layout/NavMenu.razor
+++ b/Bankapp/Layout/NavMenu.razor
@@ -11,7 +11,7 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-bank fs-3-nav-menu" aria-hidden="true"></span> Home
+                <i class="bi bi-bank-fill-nav-menu" aria-hidden="true"></i> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
