--- a/Bankapp/Pages/Home.razor
+++ b/Bankapp/Pages/Home.razor
@@ -1,7 +1,10 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Svedbank</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to Svedbank </h1>
 
-Welcome to your new app.
+
+
+<h4> With a CEO who DOESN'T mess with your money!</h4>
+
