--- a/Bankapp/Layout/MainLayout.razor.css
+++ b/Bankapp/Layout/MainLayout.razor.css
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: #f1a809;
 }
 
 main {
@@ -9,11 +10,11 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-image: linear-gradient(180deg, #f1a809 0%, #f48e35 70%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
+    background-color: #f48e35;
     border-bottom: 1px solid #d6d5d5;
     justify-content: flex-end;
     height: 3.5rem;
