--- a/Bankapp/Layout/NavMenu.razor
+++ b/Bankapp/Layout/NavMenu.razor
@@ -11,27 +11,27 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <i class="bi bi-bank-fill-nav-menu" aria-hidden="true"></i> Home
+                <span class="bi bi-bank" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="CreateAccount">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Create Account
+                <span class="bi bi-plus-square-fill" aria-hidden="true"></span> Create Account
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Accounts">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Accounts
+                <span class="bi bi-wallet2" aria-hidden="true"></span> Accounts
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="NewTransaction">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> New Transaction
+                <span class="bi bi-cash-coin" aria-hidden="true"></span> New Transaction
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="History">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> History
+                <span class="bi bi-hourglass-split" aria-hidden="true"></span> History
             </NavLink>
         </div>
        
