--- a/Bankapp/Layout/NavMenu.razor.css
+++ b/Bankapp/Layout/NavMenu.razor.css
@@ -4,7 +4,7 @@
 
 .top-row {
     height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    background-color: #f48e35;
 }
 
 .navbar-brand {
@@ -14,11 +14,10 @@
 .bi {
     display: inline-block;
     position: relative;
-    width: 1.25rem;
-    height: 1.25rem;
-    margin-right: 0.75rem;
-    top: -1px;
+    width: 1.25rem;    
+    margin-right: 1rem;    
     background-size: cover;
+    font-size: 1.5rem;
 }
 
 .bi-house-door-fill-nav-menu {
@@ -36,6 +35,7 @@
 .nav-item {
     font-size: 0.9rem;
     padding-bottom: 0.5rem;
+    align-items: center
 }
 
     .nav-item:first-of-type {
@@ -47,7 +47,7 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: black;
         border-radius: 4px;
         height: 3rem;
         display: flex;
