--- a/Bankapp/Pages/Home.razor
+++ b/Bankapp/Pages/Home.razor
@@ -1,8 +1,8 @@
 ﻿@page "/"
 
-<PageTitle>Svedbank</PageTitle>
+<PageTitle>Suedbank</PageTitle>
 
-<h1>Welcome to Svedbank </h1>
+<h1>Welcome to Suedbank </h1>
 
 
 
