--- a/Bankapp/Pages/Home.razor
+++ b/Bankapp/Pages/Home.razor
@@ -1,10 +1,18 @@
 ﻿@page "/"
 
+
 <PageTitle>Suedbank</PageTitle>
 
-<h1>Welcome to Suedbank </h1>
+<style>
+    .Texthome{
+        height: 100vh;      
+        background-image: url('/stonks-meme-template-1152x648.jpg');
+        background-color: transparent;
+    }
+    </style>
 
-
-
-<h4> With a CEO who DOESN'T mess with your money!</h4>
-
+@* <img src="/stonks-meme-template-1152x648.jpg" class="background-image" alt="Background" /> *@
+<div class="Texthome">
+    <h1>Welcome to Suedbank </h1>
+    <h4> With a CEO who DOESN'T mess with your money!</h4>
+</div>
