--- a/Bankapp/wwwroot/css/app.css
+++ b/Bankapp/wwwroot/css/app.css
@@ -106,6 +106,7 @@ code {
 
     
 }
+/*Styr formuläret*/
 .form-row{
     margin-bottom: 0.5rem
 }
@@ -140,4 +141,70 @@ code {
     margin-top: 0.5rem;
     margin-bottom: 2rem;
 
+}
+
+/* Knappar */
+.btn-submit {
+    background-color: #26b050;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    cursor: pointer;
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+}
+
+.remove-btn {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 4px 8px;
+    cursor: pointer;
+    font-size: 0.9rem;
+}
+
+    .remove-btn:hover {
+        background-color: #b02a37;
+    }
+
+/*Styr tabellen*/
+
+.accounts-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 1rem;
+    font-size: 0.9rem;
+}
+
+    .accounts-table th, .accounts-table td {
+        text-align: left;
+        padding: 8px 12px;
+        border-radius: 4px;
+    }
+
+    .accounts-table th {
+        font-weight: 600;
+    }
+
+    .accounts-table tbody tr {
+        height: 50px;
+    }
+
+        .accounts-table tbody tr:hover {
+            background-color: rgba(255,255,255,0.37);
+        }
+
+.account-item p {
+    display: flex;
+    justify-content: space-between;
+    padding: 4px 0;
+}
+
+.account-info {
+    display: inline-flex;
+    gap: 20px;
+    flex-wrap: wrap;
 }
