--- a/Bankapp/Pages/NewTransaction.razor
+++ b/Bankapp/Pages/NewTransaction.razor
@@ -1,6 +1,138 @@
-﻿
-<h3>Component</h3>
+﻿@page "/NewTransaction"
+@inject IAccountservice Accountservice;
+<h3>New Transaction</h3>
+
+@if (_accounts.Count < 2)
+{
+	<p>Skapa minst 2 konton för att göra en transaktion</p>
+}
+else
+{
+	<EditForm Model="_model" OnValidSubmit="OnSubmitAsync">
+		<DataAnnotationsValidator/>
+		<ValidationSummary/>
+
+		<div class="mb-2">
+			<label>From account</label>
+			<InputSelect TValue="Guid"
+				@bind-Value="_model.FromAccountId"
+				class="form-select"
+				@onchange="HandleFormChanged">
+				<option value="Guid.Empty">Choose account..</option>
+				@foreach (var account in _accounts)
+			{
+				<option value="@account.Id">@account.Name - Balance: @account.Balance</option>
+			}
+			</InputSelect>
+		</div>
+
+		<div class="mb-2">
+			<label>To Account</label>
+			<InputSelect TValue="Guid"
+				@bind-Value="_model.ToAccountId"
+				class="form-select"
+				disabled="@(_model.FromAccountId == Guid.Empty)">
+				<option value="@Guid.Empty">Choose account</option>
+				@foreach (var account in _toAccounts)
+			{
+				<option value="@account.Id">@account.Name - Balance: @account.Balance</option>
+			}
+			</InputSelect>
+		</div>
+
+		<div class="mb-2">
+			<label>Amount</label>
+			<InputNumber TValue="decimal" @bind-Value="_model.Amount" class="form-control"></InputNumber>
+		</div>
+
+		<button type="submit" class="btn btn-primary">Transfer</button>
+	</EditForm>
+
+	<h4>Account</h4>
+	<ul>
+		@foreach (var account in _accounts)
+		{
+			<li>@account.Name - Balance: @account.Balance</li>
+		}
+	</ul>
+}
+
 
 @code {
+	private readonly TransferFormModel _model = new();
+	private List<Bankaccount> _accounts = new();
+	private List<Bankaccount> _toAccounts = new();
 
+	private class TransferFormModel
+	{
+		public Guid FromAccountId { get; set; }
+		public Guid ToAccountId { get; set; }
+		public decimal Amount { get; set; }
+	}
+	protected override async void OnInitialized()
+	{
+		_accounts = await Accountservice.GetAccounts();
+
+		_toAccounts = _accounts;
+	}
+
+	private async Task OnSubmitAsync()
+	{
+		if (_model.FromAccountId == Guid.Empty || _model.ToAccountId == Guid.Empty)
+		{
+			StateHasChanged();
+			return;
+		}
+		if (_model.FromAccountId == _model.ToAccountId)
+		{
+			StateHasChanged();
+			return;
+		}
+
+		try
+		{
+			Accountservice.Transfer(_model.FromAccountId, _model.ToAccountId, _model.Amount);
+
+			//uppdatera vår lista
+			_accounts = await Accountservice.GetAccounts();
+
+			//Visa nån bekräftelse
+			var from = _accounts.First(x => x.Id == _model.FromAccountId);
+			var to = _accounts.First(x => x.Id == _model.ToAccountId);
+
+			_model.Amount = 0;
+			StateHasChanged();
+		}
+		catch (Exception ex)
+		{
+
+			Console.WriteLine(ex.Message);
+		}
+		return;
+	}
+
+	private void HandleFormChanged(ChangeEventArgs eventArgs)
+	{
+		if (Guid.TryParse(eventArgs.Value?.ToString(), out var id))
+		{
+			OnFormChanged(id);
+		}
+	}
+
+	private void OnFormChanged(Guid fromId)
+	{
+		_model.FromAccountId = fromId;
+		var from = _accounts.FirstOrDefault(x => x.Id == fromId);
+
+		if (from != null)
+		{
+			_toAccounts = _accounts.Where(account => account.Id != fromId).ToList();
+		}
+		else
+		{
+			_accounts = _accounts.ToList();
+		}
+
+		_model.ToAccountId = Guid.Empty;
+	}
 }
