--- a/Bankapp/Pages/CreateAccount.razor
+++ b/Bankapp/Pages/CreateAccount.razor
@@ -16,7 +16,7 @@
 		<label>Account type</label>
 		<InputSelect @bind-Value="_model.AccountType">
 			<option value="">Choose account type</option>
-			<option value="@AccountType.Deposit">Debit</option>
+			<option value="@AccountType.Checking">Checking</option>
 			<option value="@AccountType.Savings">Savings</option>
 		</InputSelect>
 	</div>
